Fix alignment

--- a/css/wizard.css
+++ b/css/wizard.css
@@ -336,7 +336,7 @@
     }
 
     .wizard-card .thumbnail i.notsure {
-        left: 40%;
+        left: 30%;
     }
 
 }
